workign on inventory manager + order manager

--- a/app.kv
+++ b/app.kv
@@ -515,6 +515,7 @@ ScreenManager:
                 text: "Total cost: $0"
 
 
+
 <OrderManager>:
         BoxLayout:
                 orientation: 'horizontal'
@@ -529,7 +530,7 @@ ScreenManager:
                         md_bg_color: 'white'
                         padding: 50
 
-                        MDLabel:  #I want padding for the bottom of the cards
+                        MDLabel:
                                 text: "Orders Manager"
                                 font_style: "H3"
                                 halign: "left"
