fixed purchase widget to show details

--- a/app.kv
+++ b/app.kv
@@ -500,8 +500,11 @@ ScreenManager:
 <PurchaseDialog>:
         orientation: 'vertical'
         size_hint_y: None
-        height: "100dp"
+        height: "150dp"
         spacing: 20
+
+        MDLabel:
+                id: cost_amount
 
         MDTextField:
                 id: amount
