For Victor lmao

--- a/app.kv
+++ b/app.kv
@@ -604,6 +604,16 @@ ScreenManager:
                                 halign: "left"
                                 size_hint: 1, 0.1
 
+                        MDBoxLayout:
+                                id: materials_container
+                                orientation: 'vertical'
+                                size_hint: 0.9, 0.9
+
+                        MDRectangleFlatIconButton:
+                                text: "Box and Ship"
+                                icon: "package-variant-closed"
+
+
 
 
 <NewOrder>:
