--- a/app.kv
+++ b/app.kv
@@ -605,14 +605,81 @@ ScreenManager:
                                 size_hint: 1, 0.1
 
                         MDBoxLayout:
-                                id: materials_container
-                                orientation: 'vertical'
-                                size_hint: 0.9, 0.9
+                                orientation: 'horizontal'
+                                size_hint: 1, 0.9
+                                pos_hint: {'center_x':0.5, 'center_y':0.5}
+                                padding: 20
 
-                        MDRectangleFlatIconButton:
-                                text: "Box and Ship"
-                                icon: "package-variant-closed"
+                                MDBoxLayout:
+                                        orientation: 'vertical'
+                                        size_hint: 0.5, 1
+                                        MDLabel:
+                                                id: customer_name
+                                                text: "Order ID:"
+                                                font_style: "H6"
+                                                size_hint: 1, 0.1
+                                        MDLabel:
+                                                id: customer_name
+                                                text: "Customer Name:"
+                                                font_style: "H6"
+                                                size_hint: 1, 0.1
+                                        MDLabel:
+                                                id: customer_address
+                                                text: "Customer Address:"
+                                                font_style: "H6"
+                                                size_hint: 1, 0.1
+                                        MDLabel:
+                                                id: order_description
+                                                text: "Headphone Specifications:"
+                                                font_style: "H6"
+                                                size_hint: 1, 0.1
+                                        MDLabel:
+                                                id: order_price
+                                                text: "Price:"
+                                                font_style: "H6"
+                                                size_hint: 1, 0.1
+                                        MDLabel:
+                                                id: placeholder
+                                                size_hint: 1, 0.5
 
+                                        MDRectangleFlatIconButton:
+                                                text: "Box and Ship"
+                                                icon: "package-variant-closed"
+                                                size_hint: 0.5, 0.1
+
+                                MDBoxLayout:
+                                        orientation: 'vertical'
+                                        size_hint: 0.5, 1
+                                        spacing: 20
+                                        md_bg_color: 'gray'
+
+                                        MDLabel:
+                                                text: "Materials:"
+                                                font_style: "H6"
+                                                size_hint: 1, 0.1
+                                                padding: 20
+
+                                        MDBoxLayout:
+                                                id: materials_container
+                                                orientation: 'vertical'
+                                                size_hint: 1, 0.9
+                                                padding: 20
+                                                md_bg_color: 'gray'
+
+<MaterialShowcase>:
+        id: materialshowcase
+        orientation: 'horizontal'
+        MDLabel:
+                id: materialname
+                size_hint: 0.4, 1
+                text: "Material"
+        MDLabel:
+                id: materialamount
+                size_hint: 0.4, 1
+                text: "Material"
+        MDCheckbox:
+                id: materialinput
+                size_hint: 0.2, 1
 
 
 
